# LAB10-Builder

./: .gitignore  README.md  package-lock.json  package.json  plantilla-brief-ia.md  plantilla-review.md
.cursor/: mcp.json
.cursor/agents/: documentation-engineer.md  qa-engineer.md  security-code-check.md
.cursor/rules/: formas_de_trabajo.mdc
.cursor/skills/defining-tdd/: SKILL.md
.cursor/skills/executing-browser/: SKILL.md
.cursor/skills/improving-code-format/: SKILL.md
.cursor/skills/inspecting-database/: SKILL.md
.cursor/skills/modifying-database/: SKILL.md
Herramientas_IA/1_templates/: plantilla-brief-ia.md  plantilla-review.md
Herramientas_IA/2_module/agents/: documentation-engineer.md  qa-engineer.md  security-code-check.md
apps/api/: .env.example  README.md  package.json  pyproject.toml
apps/api/src/lab10_api/: __init__.py  main.py
apps/api/src/lab10_api/api/: __init__.py  deps.py  router.py
apps/api/src/lab10_api/api/routes/: __init__.py  expenses.py
apps/api/src/lab10_api/app/: __init__.py  example.py
apps/api/src/lab10_api/core/: __init__.py  config.py  supabase_client.py
apps/api/src/lab10_api/schemas/: expenses.py
apps/api/src/lab10_api/services/: __init__.py  excel_export.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: __init__.py  test_example_domain.py  test_excel_export.py  test_health.py  test_uc_auth_bearer.py
apps/app/: .env.example  README.md  index.html  package.json  vitest.config.ts
apps/app/src/: App.tsx  (+1 more)
supabase/: config.toml
supabase/migrations/: 20260115120000_initial_expense_schema.sql
(+27 files in other folders)
