[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab10-api"
version = "0.1.0"
description = "Backend API — Dental Clinic Expense Extraction MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.9",
  "supabase>=2.12",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
